--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,19 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: william wishart
-email: your-email@example.com
+title: william-wishart
+email: william@williamwishart.dev
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A home for my interests, what I’m learning and various technical notes.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
+url: "https://williamwishart.dev" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: 
 github_username:  williamwishart
+show_excerpts: true
+collections:
+  projects:
+    output: true
+    permalink: /projects/:path/
 
 # Build settings
 theme: minima
